<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4EEF1"
    android:paddingBottom="20dp"
    android:paddingTop="60dp"
    tools:context=".Login" >
    
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_title"
        android:textSize="20sp"
        android:textColor="#222" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/username"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            >
           <requestFocus />
        </EditText>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/password"
            android:textColor="#372c24" />
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:ems="12"
            android:inputType="textPassword" >
        </EditText>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_toLeftOf="@+id/btn_signup"
            android:onClick="doLogin"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/password"
            android:layout_below="@+id/password"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="doRegister"
            android:text="@string/signup" />
    </LinearLayout>

</RelativeLayout>
